manifests/eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  labels:
    app:  kyc-eureka-server
spec: 
  replicas: 2
  selector:
    matchLabels:
      app:  kyc-eureka-server
  template:
    metadata:
      labels:
        app:  kyc-eureka-server
    spec:
      containers:
        - name: eureka-server
          image: cecillwala/kyc-eureka-server
          ports:
            - containerPort: 9099

---

apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  type: ClusterIP
  selector:
    app: kyc-eureka-server
  ports:
  - protocol: TCP
    port: 9099
    targetPort: 9099
