manifests/grafana-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-webhook
  template:
    metadata:
      labels:
        app: grafana-webhook
    spec:
      containers:
        - name: grafana-webhook
          image: stanleyotieno/grafana-webhook:latest 
          ports:
            - containerPort: 3000
          
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-webhook
spec:
  selector:
    app: grafana-webhook
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
  type: NodePort
