manifests/kyc-frontend.yaml
aoiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kyc-front-end
    template:
      metadata:
        labels:
          app: kyc-front-end
      spec:
        containers:
          - name: kyc-front-end
            image: cecillwala/kyc-frontend
            ports:
              - containerPort: 80

---

apiVersion: v1
kind: Service
metadata: 
  name: kyc-fontend-service
spec:
  selector: 
    app: kyc-front-end
  ports:
    - protocol:   TCP
      port: 80
      targetPort: 80
  type: NodePort
