manifests/kyc-report-backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
  labels:
    app:  kyc-report-service
spec: 
  replicas: 1
  selector:
    matchLabels:
      app:  kyc-report-service
  template:
    metadata:
      labels:
        app:  kyc-report-service
    spec:
      containers:
        - name: kyc-report-service
          image: stanleyotieno/kyc-backend-report
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: report-storage
              mountPath: /app/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "300m"
      volumes:
        - name: report-storage
          persistentVolumeClaim:
            claimName: report-pvc



---
            
apiVersion: v1
kind: Service
metadata:
  name: report-service
spec:
  type: ClusterIP
  selector:
    app: kyc-report-service
  ports:
    - port: 8083
      targetPort: 8083
