manifests/kyc-service-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-service-backend
  labels:
    app: kyc-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  kyc-service
  template:
    metadata:
      labels:
        app: kyc-service
    spec:
      containers:
        - name: kyc-service
          image: stanleyotieno/kyc-service-backend
          ports:
            - containerPort: 8081
       
---

apiVersion: v1
kind: Service
metadata:
  name: kyc-service
spec:
  type: NodePort
  selector:
    app: kyc-service
  ports:
    - port: 8081
      targetPort: 8081
